fix image overflow

--- a/src/styles/_crew.scss
+++ b/src/styles/_crew.scss
@@ -25,7 +25,7 @@
 
   h2 {
     @extend %heading-5;
-    padding-top: 14rem;
+    width: fit-content;
     text-transform: uppercase;
     span {
       font-weight: 700;
@@ -40,7 +40,7 @@
 
   .swiper-crew {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     z-index: 0;
     .swiper-slide {
       display: flex;
